--- a/import_corp.html
+++ b/import_corp.html
@@ -52,7 +52,7 @@
                         <fieldset aria-labelledby="addressinfo">
                             <div class="row">
                               <div class="form-group form-group-md col-xs-12 col-lg-7">
-                                <label for="territory">Country/US Territory</label>
+                                <label for="territory">Country</label>
                                 <select class="form-control" id="territory">
                                   <option value="United States">United States</option>
                                   <option value="Afghanistan">Afghanistan</option>
@@ -87,7 +87,7 @@
                                     <input type="text" class="form-control" id="state" th:field="*{ownerState}" required>
                                   </div>
                               <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                <label for="zipcode"><span class="weight600">&#42;</span>Zip Code</label>
+                                <label for="zipcode"><span class="weight600">&#42;</span>Postal Code</label>
                                 <input type="text" class="form-control" id="zipcode" placeholder="XXXXX" th:field="*{ownerZipcode}" required>
                               </div>
                               <div class="row">
