--- a/import_individual.html
+++ b/import_individual.html
@@ -59,7 +59,7 @@
                                         <input type="text" class="form-control" id="nameoftype" name="nameoftype"><!--needs th:attribute-->
                                       </div>
                                       <div class="form-group form-group-md col-xs-7">
-                                        <label for="countryofcitizenship">Country of Citizenship <a href="#" data-toggle="tooltip" title="If you have dual citizenship only enter the citizenship you would like printed in the Official Gazette." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
+                                        <label for="countryofcitizenship">Country of Citizenship <a href="#" data-toggle="tooltip" title="If you have dual citizenship only enter the citizenship you would like printed in the Official Gazette." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                         <select class="form-control" id="countryofcitizenship" name="countryofcitizenship" th:field="*{ownerCitizenShip}">
                                           <option value="Select">Select</option>
                                           <option value="United States">United States</option>
