Attorney Info TEAs Toggle and Flags + Minor Change Reqs
Files are current to address GitHub Issue #s 187 and 199

--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -293,7 +293,8 @@
                                                         </div>
                                                     </div>
                                                     <div>
-                                                        <p id="translit">Does your mark contain foreign wording in non-Latin characters that requires transliteration?</p>                                            			<div role="radiogroup" aria-labelledby="translit" class="form-group form-group-md">
+                                                        <p id="translit">Does your mark contain foreign wording in non-Latin characters that requires transliteration?</p>                                            			
+                                                        <div role="radiogroup" aria-labelledby="translit" class="form-group form-group-md">
                                                           <label for="inlineRadio5" class="radio-inline radiocontainer">Yes<input type="radio" name="nonlatradio" id="inlineRadio5" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                           <label for="inlineRadio6" class="radio-inline radiocontainer">No<input type="radio" name="nonlatradio" id="inlineRadio6" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
