--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -174,7 +174,14 @@
                     		<h1>Attorney Information</h1>
                         </div>
                     </div>
-                    <p class="required visuallyhidden"><span class="weight600">&#42; = Required</span></p>
+                    <p class="required"><span class="weight600">&#42; = Required</span></p>
+                    <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
+                    <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                        <label class="switch">
+                        <input class="togglesavemore" type="checkbox">
+                        <span class="slider"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                        </label>
+                    </div>
                     <!--START Attorney Information Form-->
                     <div class="card-text noexpand">
                         <h2 class="card-title weight600" id="attorneyinfo">Attorney Information</h2>
@@ -554,7 +561,7 @@
                                         <input type="text" class="form-control" id="attorney-zipcode" placeholder="XXXXX" th:field="*{attorneyZipcode}">
                                       </div>
                                       <div class="form-group form-group-md col-xs-12 col-md-7 col-lg-7">
-                                        <label for="attorney-email"><span class="weight600">&#42;</span> Email Address</label>
+                                        <label for="attorney-email" class="sr-only"><span class="weight600">&#42;</span> Email Address</label>
                                         <input type="text" class="form-control" id="attorney-email" placeholder="email Address" th:field="*{attorneyEmail}" required>
                                       </div>
                                       <div class="col-xs-12 col-md-7 phones">
@@ -610,7 +617,7 @@
                                 <fieldset aria-labelledby="affiliation">
                                     <div class="row">
                                         <div class="form-group form-group-md col-xs-12">
-                                            <label for="attorney-bar-standing">Affiliation Information</label>
+                                            <label for="attorney-bar-standing">Specify affiliation <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                             <select class="form-control" id="attorney-bar-standing" th:field="*{attorneyAffiliation}">
                                               <option value="Select">Select</option>
                                               <option value="usaffiliation">US Attorney in good standing</option>
@@ -678,7 +685,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group form-group-md col-xs-12 col-md-5">
-                                            <label for="bar-membership-number">Membership Number</label>
+                                            <label for="bar-membership-number">Membership Number <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                             <input type="text" class="form-control" id="bar-membership-number" name="attorneyBarMembershipNumber" value="">
                                         </div>
                                         <div class="form-group form-group-md col-xs-12 col-md-4">
