--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -24,9 +24,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/lynnstyles.css">
-   
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/lynnstyles.css">
 </head>
 
 <body>
@@ -76,13 +75,10 @@
           <ul class="nav navbar-nav navbar-right" id="lowernav">
           	<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu" id="feedropdown">
                 <li id="firstli">Basic Fees $225</li>
-                <li role="separator" class="divider"></li>
                 <li>Extra Class Fee $0</li>
-                <li role="separator" class="divider"></li>
                 <li>Total Classes 0</li>
-                <li role="separator" class="divider"></li>
                 <li id="lastli">Total Fee $225</li>
               </ul>
             </li>
