--- a/marks_design_with_text_M3.html
+++ b/marks_design_with_text_M3.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -94,89 +94,88 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-  
-<div class="container-fluid">    
-  <div class="row content" id="uploadmark">
-    <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
-      <!--START Content Div-->
-      <div class="row">
-        <div class="col-xs-12">
-            <div class="row">
-            	<section class="col-xs-12 steps breadcrumb-steps" aria-label="progress tracker">
-                    <div class="row displaycell">
-                        <div class="col-xs-2 one done">
-                            <div class="row">
-                                <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                    <span>1</span>
+    <div class="container-fluid">    
+      <div class="row content" id="uploadmark">
+        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
+          <!--START Content Div-->
+          <div class="row">
+            <div class="col-xs-12">
+                <div class="row">
+                    <section class="col-xs-12 steps breadcrumb-steps" aria-label="progress tracker">
+                        <div class="row displaycell">
+                            <div class="col-xs-2 one done">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                        <span>1</span>
+                                    </div>
+                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
+                                        <p class="first">Your details</p>
+                                    </div>
                                 </div>
-                                <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                    <p class="first">Your details</p>
+                            </div>
+                            <div class="col-xs-2 two active">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                        <span>2</span>
+                                    </div>
+                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
+                                        <p>Trade mark details</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-2 three">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                        <span>3</span>
+                                    </div>
+                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
+                                        <p>Goods and services</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-2 four">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                        <span>4</span>
+                                    </div>
+                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
+                                        <p>Basis</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-2 five">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                        <span>5</span>
+                                    </div>
+                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
+                                        <p>Additional info</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-2 six">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                        <span>6</span>
+                                    </div>
+                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
+                                        <p>Confirm and pay</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-2 two active">
-                            <div class="row">
-                                <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                    <span>2</span>
+                    </section>
+                </div>
+              <h1>Trademark Details &#8211; Design with Text</h1>
+              <p class="required"><span class="weight600">&#42; = Required</span></p>
+              <!--START Trademark Examples-->
+                  <!--START Standard Character-->
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="card-text noexpand">
+                                    <h2 class="card-title weight600" id="markinfo">Mark Information</h2>
                                 </div>
-                                <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                    <p>Trade mark details</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-2 three">
-                            <div class="row">
-                                <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                    <span>3</span>
-                                </div>
-                                <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                    <p>Goods and services</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-2 four">
-                            <div class="row">
-                                <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                    <span>4</span>
-                                </div>
-                                <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                    <p>Basis</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-2 five">
-                            <div class="row">
-                                <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                    <span>5</span>
-                                </div>
-                                <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                    <p>Additional info</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-2 six">
-                            <div class="row">
-                                <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                    <span>6</span>
-                                </div>
-                                <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                    <p>Confirm and pay</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div>
-          <h1>Trademark Details &#8211; Design with Text</h1>
-          <p class="required"><span class="weight600">&#42; = Required</span></p>
-          <!--START Trademark Examples-->
-              <!--START Standard Character-->
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="card-text noexpand">
-                                <h2 class="card-title weight600" id="markinfo">Mark Information</h2>
-                            </div>
-                            	<div class="row">
+                                <div class="row">
                                     <div class="col-xs-12" >
                                       <p id="typemark"><span class="weight600">&#42;</span> Upload a file containing your mark.</p>						
                                         <!--Start Dropzone-->
@@ -185,10 +184,9 @@
                                             <fieldset>
                                                 <legend class="sr-only"><span>File upload</span></legend>
                                                 <div class="form-group form-group-md">
-                                                    <label class="small upload-drop-zone" for="file"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select a File</label>
+                                                    <label class="small upload-drop-zone" for="file"><div id="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select a File</div></label>
                                                     <input type="file" id="file" name="file" class="form-control">
                                                 </div><!-- Drop Zone -->
-                                                
                                             </fieldset>
                                         </form>
                                         <div class="row">
@@ -200,28 +198,28 @@
                                             </div>
                                         </div><!-- Upload Finished -->
                                     </div>
-                              	</div>
+                                </div>
                             </div>
                         </div><!--END col-->
                     </div><!--END row-->                    
-              <!--END examples row-->
+                	<!--END examples row-->
+            	</div>
             </div>
-          </div>
-          <!--END row-->
-          <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
-            <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
+            <!--END row-->
+              <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
+                        <div class="round"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div></button>
+                </div>
             </div>
-            <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
-                    <div class="round"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div></button>
-            </div>
-        </div>
-    </main>
-  </div><!--END div content-->
-</div><!--END div container-->
+        </main>
+      </div><!--END div content-->
+    </div><!--END div container-->
   
-		    <!--jquery and web jars -->
+	<!--jquery and web jars -->
     <!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
     <script type="application/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <!--<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>-->
@@ -231,18 +229,18 @@
     <!--<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
     <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="js/lynnjqueryscript.js"></script>
-<footer>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="uspto-footer-top col-xs-4 col-sm-8 col-md-9 col-lg-9">
-                <div class="uspto-footer-logo col-sm-8">
-                    <a href="http://www.uspto.gov">
-                        <div class="footer-brand" role="img" aria-label="United States Office of Patent and Trademarks"></div>
-                    </a>
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="uspto-footer-top col-xs-4 col-sm-8 col-md-9 col-lg-9">
+                    <div class="uspto-footer-logo col-sm-8">
+                        <a href="http://www.uspto.gov">
+                            <div class="footer-brand" role="img" aria-label="United States Office of Patent and Trademarks"></div>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-xs-8 col-sm-4 col-md-3">
-                	<div class="row">
+                <div class="col-xs-8 col-sm-4 col-md-3">
+                    <div class="row">
                         <div class="col-xs-6">
                             <p><span id="webPolicy">Website Policy</span></p>
                         </div>
@@ -251,12 +249,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </body>
-
-
-
-
 </html>
