--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -205,7 +205,7 @@
                                                     <div class="col-xs-12 col-md-6">
                                                         <p id="upimage">Provide an image of your specimen:</p>
                                                         <div>
-                                                            <label class="small upload-drop-zone" for="specimenfile" id="upimg"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload.</label>
+                                                            <label class="small upload-drop-zone" for="specimenfile" id="upimg"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload</div></label>
                                                             <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimg upimage">
                                                         </div><!-- Drop Zone -->
                                                     </div>
@@ -243,7 +243,7 @@
                                                             <div class="col-xs-12 col-md-6">
                                                                 <p id="upimagetwo">Provide an image of your specimen:</p>
                                                                 <div>
-                                                                    <label class="small upload-drop-zone" for="specimentwofile" id="upimgtwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload.</label>
+                                                                    <label class="small upload-drop-zone" for="specimentwofile"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload</div></label>
                                                                     <input type="file" id="specimentwofile" name="specimentwofileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
                                                                 </div><!-- Drop Zone -->
                                                             </div>
@@ -293,8 +293,8 @@
                                                             <div class="col-xs-12 col-md-6">
                                                                 <p id="upimagefour">Provide an image of your specimen:</p>
                                                                 <div>
-                                                                    <label class="small upload-drop-zone" for="specimentwofile" id="upimgtwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload.</label>
-                                                                    <input type="file" id="specimentwofile" name="specimentwofileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
+                                                                    <label class="small upload-drop-zone" for="specimenthreefile"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload</div></label>
+                                                                    <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
                                                                 </div><!-- Drop Zone -->
                                                             </div>
                                                             <div class="col-xs-12 col-md-6">
@@ -377,7 +377,7 @@
                                                                 <div class="form-group form-group-md col-xs-12">
                                                                     <p id="upimagethree">Provide an image of forereign registration certificate: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
                                                                     <div>
-                                                                        <label class="small upload-drop-zone" for="renewfile" id="upimgtwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></label>
+                                                                        <label class="small upload-drop-zone" for="renewfile"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload</div></label>
                                                                         <input type="file" id="renewfile" name="specimenfileupload" class="form-control" aria-labelledby="upimgtwo upimagethree">
                                                                     </div><!-- Drop Zone -->
                                                                 </div>
