--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -75,7 +75,7 @@
           <ul class="nav navbar-nav navbar-right" id="lowernav">
           	<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
-              <ul class="dropdown-menu" id="feedropdown">
+              <ul class="dropdown-menu">
                 <li id="firstli">Basic Fees $225</li>
                 <li>Extra Class Fee $0</li>
                 <li>Total Classes 0</li>
