2 Good/Service per class radio buttons malfuctioning #337

--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -270,8 +270,8 @@
                                                     </div>
                                                     <p id="connection">Are you currently using the mark on goods/services in commerce? <span class="label label-info subtle visuallyremoved">Reduce Fee</span></p>                                            				
                                                     <div role="radiogroup" aria-labelledby="connection" class="form-group form-group-md">
-                                                        <label for="inlineRadio29" class="radio-inline radiocontainer"><input type="radio" name="commerceadio" id="inlineRadio29" value="yes" tabindex="0"><span class="checkmark"></span>Yes</label>
-                                                        <label for="inlineRadio30" class="radio-inline radiocontainer"><input type="radio" name="commerceadio" id="inlineRadio30" value="no" tabindex="0"><span class="checkmark"></span>No</label>
+                                                        <label for="inlineRadio29" class="radio-inline radiocontainer"><input type="radio" name="commerceadiotwo" id="inlineRadio29" value="yes" tabindex="0"><span class="checkmark"></span>Yes</label>
+                                                        <label for="inlineRadio30" class="radio-inline radiocontainer"><input type="radio" name="commerceadiotwo" id="inlineRadio30" value="no" tabindex="0"><span class="checkmark"></span>No</label>
                                                     </div><!--END radiogroup-->
                                                     <div id="yesconnection" class="form-group form-group-md"><!--toggle 'yes' radio-->
                                                         <div class="col-xs-12 col-md-6 form-group form-group-md">
