--- a/marks_design_with_text_M3.html
+++ b/marks_design_with_text_M3.html
@@ -181,14 +181,14 @@
                                             <fieldset>
                                                 <legend class="sr-only"><span>File upload</span></legend>
                                                 <div class="form-group form-group-md">
-                                                    <label class="small upload-drop-zone" for="file"><div id="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select a File</div></label>
+                                                    <label class="small upload-drop-zone" for="file"><div id="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
                                                     <input type="file" id="file" name="file" class="form-control">
                                                 </div><!-- Drop Zone -->
                                             </fieldset>
                                         </form>
                                         <div class="row">
                                             <div class="js-upload-finished col-xs-12 col-md-10 col-lg-8">
-                                                <p id="uploaded">Processed files</p>
+                                                <p id="uploaded">Processed Files</p>
                                                 <div class="list-group">
                                                     <a href="#" class="list-group-item list-group-item-success" aria-labelledby="uploaded"></a>
                                                 </div>
