--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -202,9 +202,17 @@
                                                     <div class="col-xs-12 col-md-6">
                                                         <p id="upimage">Provide an image of your specimen:</p>
                                                         <div>
-                                                            <label class="small upload-drop-zone" for="specimenfile" id="upimg"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload</div></label>
+                                                            <label class="small upload-drop-zone" for="specimenfile" id="upimg"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
                                                             <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimg upimage">
                                                         </div><!-- Drop Zone -->
+                                                        <div class="row">
+                                                            <div class="js-upload-finished col-xs-12">
+                                                                <p id="uploaded">Processed Files</p>
+                                                                <div class="list-group">
+                                                                    <a href="#" class="list-group-item list-group-item-success" aria-labelledby="uploaded"></a>
+                                                                </div>
+                                                            </div>
+                                                        </div><!-- Upload Finished -->
                                                     </div>
                                                     <div class="col-xs-12 col-md-6">
                                                         <label for="specdescript">Provide a description of your specimen:</label> 
@@ -240,7 +248,7 @@
                                                             <div class="col-xs-12 col-md-6">
                                                                 <p id="upimagetwo">Provide an image of your specimen:</p>
                                                                 <div>
-                                                                    <label class="small upload-drop-zone" for="specimentwofile"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload</div></label>
+                                                                    <label class="small upload-drop-zone" for="specimentwofile"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
                                                                     <input type="file" id="specimentwofile" name="specimentwofileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
                                                                 </div><!-- Drop Zone -->
                                                             </div>
@@ -290,7 +298,7 @@
                                                             <div class="col-xs-12 col-md-6">
                                                                 <p id="upimagefour">Provide an image of your specimen:</p>
                                                                 <div>
-                                                                    <label class="small upload-drop-zone" for="specimenthreefile"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload</div></label>
+                                                                    <label class="small upload-drop-zone" for="specimenthreefile"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
                                                                     <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
                                                                 </div><!-- Drop Zone -->
                                                             </div>
@@ -374,7 +382,7 @@
                                                                 <div class="form-group form-group-md col-xs-12">
                                                                     <p id="upimagethree">Provide an image of forereign registration certificate: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
                                                                     <div>
-                                                                        <label class="small upload-drop-zone" for="renewfile"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload</div></label>
+                                                                        <label class="small upload-drop-zone" for="renewfile"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
                                                                         <input type="file" id="renewfile" name="specimenfileupload" class="form-control" aria-labelledby="upimgtwo upimagethree">
                                                                     </div><!-- Drop Zone -->
                                                                 </div>
