--- a/marks_design_with_text_M3.html
+++ b/marks_design_with_text_M3.html
@@ -187,7 +187,7 @@
                                             </fieldset>
                                         </form>
                                         <div class="row">
-                                            <div class="js-upload-finished col-xs-12 col-md-10 col-lg-8">
+                                            <div class="js-upload-finished col-xs-12">
                                                 <p id="uploaded">Processed Files</p>
                                                 <div class="list-group">
                                                     <a href="#" class="list-group-item list-group-item-success" aria-labelledby="uploaded"></a>
