Resolution of Issues #327, #290, #312, #295
#327 - Dashboard Headings
#290 - Add Yes/No to Misc. Info
#312 - Hover Text for Additional Information
#295 - Principal Register layout

--- a/dashboard.html
+++ b/dashboard.html
@@ -112,7 +112,7 @@
                                                     <table id="dashboardtableone" class="table dataTable row-border display responsive" style="width:100%" role="grid" aria-describedby="filings">
                                                         <thead>
                                                         	<tr role="row">
-                                                                <th colspan="5" scope="colgroup"><span id="filings">Filings</span> <button type="button" class="btn-sm btn-success fill">New Application</button></th>
+                                                                <th colspan="5" scope="colgroup"><span id="filingsheader">Filings</span> <button type="button" class="btn-sm btn-success fill">New Application</button></th>
                                                             </tr>
                                                             <tr role="row">
                                                                 <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Serial#</th>
