--- a/additional_information.html
+++ b/additional_information.html
@@ -436,6 +436,10 @@
                                                                 <div class="col-xs-12 form-group form-group-md holdsaconcregapp">
                                                                     <div class="row">
                                                                         <div class="col-xs-12 col-md-7 form-group form-group-md">
+                                                                            <label for="ttab">Provide <span class="uppercase">ttab</span> Proceeding Number:</label> 
+                                                                            <textarea id="ttab" rows="1" class="form-control"></textarea>
+                                                                        </div>
+                                                                        <div class="col-xs-12 col-md-7 form-group form-group-md">
                                                                             <label for="concurrentfiles">Registration Issued/Applications Files by Concurrent User</label> 
                                                                             <textarea id="concurrentfiles" rows="1" class="form-control"></textarea>
                                                                         </div>
