Review Owner + Misc.
Updated '.lead' class to '.leadtext' class: BS has native .lead class which was over-riding, removed 2 lines of local styling from Dashboard, Owner Info - Review is a new page for JB and JG.

--- a/dashboard.html
+++ b/dashboard.html
@@ -293,8 +293,8 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-xs-2 closepans" style="height: 20px;">
-                                                                <button type="button" class="close closegspanels btn" aria-label="Close" style="line-height: 20px;"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
+                                                            <div class="col-xs-2 closepans">
+                                                                <button type="button" class="close closegspanels btn" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
                                                             </div>
                                                         </div>
                                                     </div>
