--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -179,7 +179,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12" id="declarationsignature">
-                                <div class="lead">
+                                <div class="leadtext">
                                     <p id="lead">Selecting edit will take you back to the appropriate section in the application.</p>
                                 </div>
                                 <div class="card-text noexpand">
