--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -187,7 +187,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12" id="basisabde">
-                                <div class="lead">
+                                <div class="leadtext">
                                     <p id="lead" class="weight600">Provide a specimen for all goods/services within the class. Only one specimen is required per class.</p>
                                 </div>
                                 <div class="card-text noexpand blue">
