--- a/gridview_all.html
+++ b/gridview_all.html
@@ -179,7 +179,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12" id="gridview">
-                                <div class="lead">
+                                <div class="leadtext">
                                     <p id="lead">Please provide information about each class you have selected for your Scrubby Butts trademark.</p>
                                 </div>
                                 <div class="table-responsive">
