--- a/review_application.html
+++ b/review_application.html
@@ -175,7 +175,7 @@
                                 <div class="card-text noexpand">
                                     <h2 class="card-title weight600">Application Fee</h2>
                                 </div>
-                                <div class="lead">
+                                <div class="leadtext">
                                     <p id="lead">Your current filing fee is $275 per class. To reduce your filing fee to $225, select &#8220;Return to Application&#8221; and complete the missing fields below.</p>
                                 </div>
                                 <button type="button" class="btn-sm btn-success fill">Return to Application</button>
