--- a/GS_selected.html
+++ b/GS_selected.html
@@ -168,7 +168,7 @@
                     <div class="row">
                         <div class="col-xs-12" id="gsselected">
                             <div id="lead">
-                                <p>All of the selected goods and services are provided below.</p>
+                                <p class="leadtext">All of the selected goods and services are provided below.</p>
                             </div>
                             	<div class="row">
                                     <div class="col-xs-12">
@@ -183,7 +183,7 @@
                                                             <div class="col-xs-12">
                                                             	<div class="row">
                                                                     <div class="col-xs-5">
-                                                                        <h4 class="panel-title number">Class 003</h4>
+                                                                        <p class="panel-title number">Class 003</p>
                                                                     </div>
                                                                     <div class="col-xs-7">
                                                                         <p>Bar Soap</p>
@@ -192,7 +192,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-xs-2 closepans">
-                                                        	<button type="button" class="close closegspanels btn" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
+                                                        	<button type="button" class="close closegspanels btn" aria-label="remove"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
                                                         </div>
                                                     </div>
                                                 </div>
@@ -207,7 +207,7 @@
                                                             <div class="col-xs-12">
                                                             	<div class="row">
                                                                     <div class="col-xs-5">
-                                                                        <h4 class="panel-title number">Class 003</h4>
+                                                                        <p class="panel-title number">Class 003</p>
                                                                     </div>
                                                                     <div class="col-xs-7">
                                                                         <p>Liquid Bar Soap</p>
@@ -216,7 +216,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-xs-2 closepans">
-                                                        	<button type="button" class="close closegspanels btn" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
+                                                        	<button type="button" class="close closegspanels btn" aria-label="remove"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
                                                         </div>
                                                     </div>
                                                 </div>
@@ -231,7 +231,7 @@
                                                             <div class="col-xs-12">
                                                             	<div class="row">
                                                                     <div class="col-xs-5">
-                                                                        <h4 class="panel-title number">Class 016</h4>
+                                                                        <p class="panel-title number">Class 016</p>
                                                                     </div>
                                                                     <div class="col-xs-7">
                                                                         <p>Paper Bags</p>
@@ -240,7 +240,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-xs-2 closepans">
-                                                        	<button type="button" class="close closegspanels btn" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
+                                                        	<button type="button" class="close closegspanels btn" aria-label="remove"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
                                                         </div>
                                                     </div>
                                                 </div>
