Client Change Req + Hover Fix
Hover fix for close button, 'Owner review', client Change Req. 'Additional Info' page

--- a/additional_information.html
+++ b/additional_information.html
@@ -175,7 +175,8 @@
                                     <div class="row">
                                         <div class="col-xs-12">
                                             <div>
-                                                <p id="notprevious">Do you need to provide additional information about your mark?</p>                                                <div role="radiogroup" aria-labelledby="notprevious" class="form-group form-group-md">
+                                                <p id="notprevious">Do you need to provide additional information about your mark?</p>                                                
+                                                <div role="radiogroup" aria-labelledby="notprevious" class="form-group form-group-md">
                                                   <label for="inlineRadio045" class="radio-inline radiocontainer">Yes<input type="radio" name="uncommoninfo" id="inlineRadio045" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                   <label for="inlineRadio046" class="radio-inline radiocontainer">No<input type="radio" name="uncommoninfo" id="inlineRadio046" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                 </div><!--END radiogroup-->
@@ -253,8 +254,8 @@
                                                     <div>
                                                         <div role="radiogroup" aria-labelledby="disclaim" class="form-group form-group-md">
                                                         <fieldset aria-label="principal or supplemental">
-                                                          <label for="inlineRadio031" class="radio-inline radiocontainer">Principal<input type="radio" name="principalregister" id="inlineRadio031" value="principal" tabindex="0"><span class="checkmark"></span></label>
-                                                          <label for="inlineRadio032" class="radio-inline radiocontainer">Supplemental<input type="radio" name="principalregister" id="inlineRadio032" value="supplemental" tabindex="0"><span class="checkmark"></span></label>
+                                                          <label for="inlineRadio031" class="form-group form-group-md radiocontainer">Principal Register<input type="radio" name="principalregister" id="inlineRadio031" value="principal" tabindex="0"><span class="checkmark"></span></label>
+                                                          <label for="inlineRadio032" class="form-group form-group-md radiocontainer">Supplemental Register<input type="radio" name="principalregister" id="inlineRadio032" value="supplemental" tabindex="0"><span class="checkmark"></span></label>
                                                         </fieldset>
                                                         </div><!--END radiogroup-->
                                                     </div>
