--- a/owner_info_review.html
+++ b/owner_info_review.html
@@ -354,7 +354,7 @@
                                                                 <button type="button" class="btn btn-sm btn-success" aria-label="edit contact">Edit</button>
                                                             </div>
                                                             <div class="btn-group">
-                                                                <button type="button" class="btn btn-sm btn-primary close" aria-label="close contact"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                                                <button type="button" class="btn btn-sm close" aria-label="close contact"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -530,7 +530,7 @@
                                                                 <button type="button" class="btn btn-sm btn-success" aria-label="edit contact">Edit</button>
                                                             </div>
                                                             <div class="btn-group">
-                                                                <button type="button" class="btn btn-sm btn-primary close" aria-label="close contact"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                                                <button type="button" class="btn btn-sm close" aria-label="close contact"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                             </div>
                                                         </div>
                                                     </div>
