Toggle Change Req
added  a class to HTML, rev. CSS, rev jQuery 'if else'

--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -168,8 +168,11 @@
                 <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
                 <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
                     <label class="switch">
-                    <input class="togglesavemore" type="checkbox">
-                    <span class="slider"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                        <input class="togglesavemore" type="checkbox">
+                        <span class="slider uppercase">
+                            <span class="visuallyhidden" id="on">On</span> 
+                            <span id="off">Off</span>
+                        </span>
                     </label>
                 </div>
                 <!--START Trademark Details Design with Text-->
