--- a/owner_info_review.html
+++ b/owner_info_review.html
@@ -337,8 +337,8 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="col-xs-12 col-md-4">
-                                                                            <p id="jbabosphone">Phone Ext.</p>
-                                                                            <div aria-labelledby="jbabosphone">
+                                                                            <p id="jbabosphonex">Phone Ext.</p>
+                                                                            <div aria-labelledby="jbabosphonex">
                                                                                 <div class="form-group form-group-md">
                                                                                     <label for="ta028" class="weight600 sr-only">review phone number extension</label> 
                                                                                     <input type="text" id="ta028" class="form-control" />
