--- a/login_loginmodal.html
+++ b/login_loginmodal.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/lynnstyles.css">
 </head>
 
-<body>
+<body class="loginform">
 <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -100,11 +100,12 @@
                     <form action="" method="post" >
                       <fieldset aria-label="login">
                           <div class="headlinecontainer">
-                            <h2 class="weight600">Log In</h2>
+                          	<h1><img src="images/logo_top.png" alt="USPTO eFile Reimagined"> &#124; eFile Reimagined</h1>
+							<h2 class="weight600">Log In</h2>
                           </div>
-                          <div class="maincontainer form-group form-group-md">
+                          <div class="maincontainer">
                             <div class="form-group form-group-md">
-                                <label for="uname"><b>Username</b></label>
+                                <label for="uname"><b>Email Address</b></label>
                                 <input type="text" class="form-control" placeholder="Enter Username" name="uname" required>
                             </div>
                             <div class="form-group form-group-md">
@@ -115,7 +116,6 @@
                           </div>
                         
                           <div class="maincontainer bottom">
-                            <button type="button" class="btn btn-md btn-success">Reset</button>
                             <div class="psw">
                                 <p><a href="#">New</a> user? Forgot <a href="#">password?</a></p>
                             </div>
