#331 + Login Page / Login Modal Prototypes
When a user changes to “Supplemental Register”, the following things would happen:

1. The following warning should be displayed: “Applications on the Supplemental Register do not qualify for the lowest filing fee per class.”
2. The fee widget will be updated with the highest fee per class. (jQuery functionality is for prototyping / demonstrating functionality)

--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -218,7 +218,7 @@
                                                             <input class="form-check-input checkmark" type="checkbox" value="accept B W mark" role="checkbox" tabindex="0" aria-labelledby="acceptmark" id="bwmark">
                                                             <label class="form-check-label form-check" for="bwmark" id="acceptmark"><span class="radio notspecial">Accept the black and white drawing.</span></label>
                                                             <div class="alert alert-warning" role="alert">
-                                                              <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+                                                              <span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
                                                               <span class="sr-only">Warning:</span>
                                                               Submitting a color drawing with no claim to color could result in a refusal and delay the examination process.
                                                             </div>
