--- a/additional_information.html
+++ b/additional_information.html
@@ -73,12 +73,12 @@
           
           <ul class="nav navbar-nav navbar-right" id="lowernav">
           	<li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li id="firstli">Basic Fees $225</li>
-                <li>Extra Class Fee $0</li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $<span id="displayfees">225</span><span class="caret"></span></a>
+              <ul class="dropdown-menu" id="classfees">
+                <li id="firstli">Basic Fees $<span>225</span></li>
+                <li id="classli">Extra Class Fee $<span>0</span></li>
                 <li>Total Classes 0</li>
-                <li id="lastli">Total Fee $225</li>
+                <li id="lastli">Total Fee $<span>225</span></li>
               </ul>
             </li>
 		<!--<li><a href="#">Actions</a></li>
@@ -258,6 +258,11 @@
                                                           <label for="inlineRadio032" class="form-group form-group-md radiocontainer">Supplemental Register<input type="radio" name="principalregister" id="inlineRadio032" value="supplemental" tabindex="0"><span class="checkmark"></span></label>
                                                         </fieldset>
                                                         </div><!--END radiogroup-->
+                                                    </div>
+                                                    <div class="alert alert-warning visuallyremoved" role="alert">
+                                                      <span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
+                                                      <span class="sr-only">Warning:</span>
+                                                      Applications on the Supplemental Register do not qualify for the lowest filing fee per class.
                                                     </div>
                                             </section>
                                         </div>
